--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,11 @@ $RECYCLE.BIN/
 .DS_Store
 
 _NCrunch*
+obj/Debug/netstandard2.0/OcCardPack.pdb
+obj/Debug/netstandard2.0/OcCardPack.dll
+obj/Debug/netstandard2.0/OcCardPack.csprojAssemblyReference.cache
+obj/Debug/netstandard2.0/OcCardPack.csproj.CoreCompileInputs.cache
+bin/Debug/netstandard2.0/OcCardPack.pdb
+bin/Debug/netstandard2.0/OcCardPack.dll
+.vs/OcCardPack/v16/.suo
+.vs/OcCardPack/DesignTimeBuild/.dtbcache.v2
